--- a/public/signup.html
+++ b/public/signup.html
@@ -2,92 +2,178 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up - ioChatApp</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body,
-        html {
-            overflow-y: auto;
-        }
-        
+      body, html {
+        overflow-y: auto;
+      }
     </style>
     <!-- External Stylesheet -->
-    <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <!-- Navbar -->
-    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
-                    </li>
-                </ul>
-            </div>
+    <nav style="background-color: #0d1117" class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a style="color: #9198a1" class="navbar-brand" href="/">ioChatApp</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                How to use
+              </button>
+
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">
+                        How to use ioChatApp
+                      </h1>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <ol>
+                        <li>Sign up and login</li>
+                        <li>Add a friend registered on ioChatApp</li>
+                        <li>
+                          A unique code will be generated with your friend's username appended to it
+                        </li>
+                        <li>Send the code and your username to the friend as a handshake request</li>
+                        <li>Your friend accepts the handshake by adding your username</li>
+                        <li>Your friend adds your handshake</li>
+                        <li>Click "Chat" to start a conversation</li>
+                        <li>You can now send messages back and forth</li>
+                      </ol>
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <!-- Sign Up Form -->
     <div class="signup-form">
-        <h2 class="text-center">Sign Up</h2>
-        <form>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" minlength="3" maxlength="25"
-                    required>
-            </div>
-            <div class="mb-3">
-                <label for="sex" class="form-label">Sex</label>
-                <select class="form-select" id="sex" name="sex" required>
-                    <option value="" disabled selected>Select your sex</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Other</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" minlength="6" maxlength="15"
-                    required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirm_password" name="confirm_password" minlength="6"
-                    maxlength="15" required>
-            </div>
-          
-            <div class="d-grid">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-            </div>
-            <div class="text-center" id="error-id">
-                <p id="error-message" class="text-danger"></p>
-            </div>
-        </form>
+      <h2 class="text-center">Sign Up</h2>
+      <form>
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input
+            type="text"
+            class="form-control"
+            id="username"
+            name="username"
+            minlength="3"
+            maxlength="25"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="sex" class="form-label">Sex</label>
+          <select class="form-select" id="sex" name="sex" required>
+            <option value="" disabled selected>Select your sex</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            minlength="6"
+            maxlength="15"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="confirm_password" class="form-label">Confirm Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="confirm_password"
+            name="confirm_password"
+            minlength="6"
+            maxlength="15"
+            required
+          />
+        </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-primary">Sign Up</button>
+        </div>
+        <div class="text-center" id="error-id">
+          <p id="error-message" class="text-danger"></p>
+        </div>
+      </form>
     </div>
 
     <!-- Footer -->
     <footer id="signup-footer">
-        <p>&copy; 2024 ioChatApp. All rights reserved.</p>
-    </footer>`
+      <p>&copy; 2024 ioChatApp. All rights reserved.</p>
+    </footer>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/javascripts/signup.js"></script>
-</body>
+  </body>
 </html>
