--- a/public/index.html
+++ b/public/index.html
@@ -2,107 +2,175 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Application</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body,
-        html {
-            height: 100%;
-            background-color: #010409;
-            color: #9198a1;
-        }
-       
+      body,
+      html {
+        height: 100%;
+        background-color: #010409;
+        color: #9198a1;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Navbar -->
-    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a style="color: #9198a1;" class="navbar-brand" href="#">ioChatApp</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
-                    </li>
-                </ul>
-            </div>
+    <nav style="background-color: #0d1117" class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a style="color: #9198a1" class="navbar-brand" href="#">ioChatApp</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/signup"
+                >Sign Up</a
+              >
+            </li>
+            <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <!-- Button to trigger modal -->
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                How to Use
+              </button>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
+
+     <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              How to use ioChatApp
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <ol>
+              <li>Sign up and login</li>
+              <li>Add a friend registered on ioChatApp</li>
+              <li>A unique code will be generated with your friend's username appended to it</li>
+              <li>Send the code and your username to the friend as a handshake request</li>
+              <li>Your friend accepts the handshake by adding your username</li>
+              <li>Your friend adds your handshake</li>
+              <li>Click "Chat" to start a conversation</li>
+              <li>You can now send messages back and forth</li>
+            </ol>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- Hero Section -->
     <div class="app-name">
-        <h1>Welcome to ioChatApp</h1>
+      <h1>Welcome to ioChatApp</h1>
     </div>
 
     <!-- Features Section -->
     <div class="container text-center my-3">
-        <h2 class="text-light">Features</h2>
-        <div class="row">
-            <div class="col-md-4 feature">
-                <div class="feature-icon">💬</div>
-                <h3>Real-Time Messaging</h3>
-                <p>Chat instantly with friends and family in real time.</p>
-            </div>
-            <div class="col-md-4 feature">
-                <div class="feature-icon">🔒</div>
-                <h3>Secure</h3>
-                <p>Your conversations are encrypted and private.</p>
-            </div>
-            <div class="col-md-4 feature">
-                <div class="feature-icon">📱</div>
-                <h3>Mobile Friendly</h3>
-                <p>Access your chats from anywhere on any device.</p>
-            </div>
+      <h2 class="text-light">Features</h2>
+      <div class="row">
+        <div class="col-md-4 feature">
+          <div class="feature-icon">💬</div>
+          <h3>Real-Time Messaging</h3>
+          <p>Chat instantly with friends and family in real time.</p>
         </div>
+        <div class="col-md-4 feature">
+          <div class="feature-icon">🔒</div>
+          <h3>Secure</h3>
+          <p>Your conversations are encrypted and private.</p>
+        </div>
+        <div class="col-md-4 feature">
+          <div class="feature-icon">📱</div>
+          <h3>Mobile Friendly</h3>
+          <p>Access your chats from anywhere on any device.</p>
+        </div>
+      </div>
     </div>
 
     <!-- Call to Action -->
     <div class="text-center my-5">
-        <h2 class="text-light">Join Us Today!</h2>
-        <a href="/signup" class="btn btn-primary btn-lg">Sign Up Now</a>
+      <h2 class="text-light">Join Us Today!</h2>
+      <a href="/signup" class="btn btn-primary btn-lg">Sign Up Now</a>
     </div>
 
     <!-- Testimonials Section -->
     <div class="container my-3">
-        <h2 class="text-light text-center">What Our Users Say</h2>
-        <div class="row">
-            <div class="col-md-4 testimonial">
-                <p>"ioChatApp has transformed the way I communicate with my friends!"</p>
-                <cite>- Alex</cite>
-            </div>
-            <div class="col-md-4 testimonial">
-                <p>"I love the security features. I feel safe chatting here."</p>
-                <cite>- Emeka</cite>
-            </div>
-            <div class="col-md-4 testimonial">
-                <p>"The mobile experience is fantastic! I can chat on the go."</p>
-                <cite>- Bola</cite>
-            </div>
+      <h2 class="text-light text-center">What Our Users Say</h2>
+      <div class="row">
+        <div class="col-md-4 testimonial">
+          <p>
+            "ioChatApp has transformed the way I communicate with my friends!"
+          </p>
+          <cite>- Alex</cite>
         </div>
+        <div class="col-md-4 testimonial">
+          <p>"I love the security features. I feel safe chatting here."</p>
+          <cite>- Emeka</cite>
+        </div>
+        <div class="col-md-4 testimonial">
+          <p>"The mobile experience is fantastic! I can chat on the go."</p>
+          <cite>- Bola</cite>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 ChatApp. All rights reserved.</p>
+      <p>&copy; 2024 ChatApp. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+  </body>
 </html>
